--- a/app/src/main/res/layout/community_info_page.xml
+++ b/app/src/main/res/layout/community_info_page.xml
@@ -9,6 +9,7 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="218dp"
+        android:fitsSystemWindows="true"
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -29,6 +30,7 @@
                 android:adjustViewBounds="true"
                 android:src="@drawable/s03_ep03"
                 app:layout_collapseMode="parallax"
+                android:fitsSystemWindows="true"
                 app:layout_collapseParallaxMultiplier="0.7"
                 android:scaleType="centerCrop"/>
 
@@ -37,6 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                android:fitsSystemWindows="true"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
