--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group>
         <item
             android:id="@+id/viewAccount"
             android:title="My Account" />
@@ -17,8 +17,9 @@
         <item
             android:id="@+id/findPeople"
             android:title="People Finder" />
+    </group>
 
-
+    <group android:id="@+id/grp">
         <item
             android:id="@+id/share"
             android:icon="@drawable/ic_menu_share"
@@ -26,7 +27,7 @@
         <item
             android:id="@+id/signOut"
             android:title="Sign Out" />
-
     </group>
+
 
 </menu>
