--- a/app/src/main/res/layout/row_community_list.xml
+++ b/app/src/main/res/layout/row_community_list.xml
@@ -8,34 +8,14 @@
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="8dp"
     android:foreground="?android:attr/selectableItemBackground">
-
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <TextView
-            android:text="Samagra Sharma"
+            android:id="@+id/communityName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:id="@+id/name"/>
-
-        <TextView
-            android:text="Requested"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textStyle="italic"
-            android:id="@+id/intent" />
-
-        <TextView
-            android:text="A Butter Knife"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:id="@+id/post" />
+            android:text="Community Name"
+            android:textSize="20dp"/>
     </LinearLayout>
-
 </android.support.v7.widget.CardView>
