--- a/app/src/main/res/layout/row_community_list.xml
+++ b/app/src/main/res/layout/row_community_list.xml
@@ -2,20 +2,28 @@
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
-    card_view:cardCornerRadius="8dp"
-    card_view:cardElevation="8dp"
-    android:foreground="?android:attr/selectableItemBackground">
-    <LinearLayout
+    card_view:cardCornerRadius="20dp"
+    card_view:cardElevation="16dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    >
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="88dp"
+        android:background="#90CAF9"
+        >
         <TextView
             android:id="@+id/communityName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Community Name"
-            android:textSize="20dp"/>
-    </LinearLayout>
+            android:textSize="20dp"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textColor="#ffffff"/>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
