--- a/app/src/main/res/layout/row_item_layout.xml
+++ b/app/src/main/res/layout/row_item_layout.xml
@@ -7,7 +7,8 @@
     android:layout_margin="16dp"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="8dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    >
 
     <LinearLayout
         android:orientation="vertical"
