--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,7 +33,8 @@
                 app:layout_collapseMode="parallax"
                 android:fitsSystemWindows="true"
                 app:layout_collapseParallaxMultiplier="0.7"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                android:id="@+id/my_pic" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
