Share Request Feature added

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,4 +10,9 @@
         <item>O+</item>
         <item>O-</item>
     </string-array>
+    <string-array name="array_post_options">
+        <item>Post</item>
+        <item>Request someone</item>
+        <item>Share something</item>
+        </string-array>
 </resources>
