--- a/app/src/main/res/layout/community_info_page.xml
+++ b/app/src/main/res/layout/community_info_page.xml
@@ -152,23 +152,23 @@
                 android:src="@drawable/ic_phone_black" />
 
             <TextView
-                android:id="@+id/communityMembers"
+                android:id="@+id/joined"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_toEndOf="@id/ivContactItem3"
-                android:text="256 members"
+                android:text = "One moment please..."
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="#212121" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/communityMembers"
+                android:layout_below="@id/joined"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="8dp"
                 android:layout_toEndOf="@id/ivContactItem3"
-                android:text="Community Description"
+                android:text="Status"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="#727272" />
 
