--- a/app/src/main/res/layout/create_community_page.xml
+++ b/app/src/main/res/layout/create_community_page.xml
@@ -82,11 +82,6 @@
                     android:hint="Community name here"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="#212121" />
-
-                >
-
-
-
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -103,7 +98,7 @@
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:src="@drawable/ic_phone_black" />
 
-                <TextView
+                <EditText
                     android:id="@+id/communityDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -112,11 +107,6 @@
                     android:hint="Community description here"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="#212121" />
-
-
-
-
-
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
